--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
     <repositories>
         <repository>
             <id>purpur</id>
-            <url>https://repo.pl3x.net/</url>
+            <url>https://repo.purpurmc.org/snapshots</url>
         </repository>
         <repository>
             <id>sonatype</id>
@@ -82,15 +82,20 @@
         </repository>
         <repository>
             <id>placeholderapi</id>
-            <url>http://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
+        </repository>
+        <repository>
+            <id>maven_central</id>
+            <name>Maven Central</name>
+            <url>https://repo.maven.apache.org/maven2/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>net.pl3x.purpur</groupId>
+            <groupId>org.purpurmc.purpur</groupId>
             <artifactId>purpur-api</artifactId>
-            <version>1.16.2-R0.1-SNAPSHOT</version>
+            <version>1.20.6-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -102,19 +107,19 @@
         <dependency>
             <groupId>org.bstats</groupId>
             <artifactId>bstats-bukkit</artifactId>
-            <version>1.7</version>
+            <version>3.0.2</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
-            <version>2.10.6</version>
+            <version>2.11.6</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>net.zrips</groupId>
-            <artifactId>cmi-api</artifactId>
-            <version>7.6.2.0</version>
+            <groupId>CMI-API</groupId>
+            <artifactId>CMI-API</artifactId>
+            <version>9.7.0.8</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
